# alt-markdown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml  weekly.yml
crates/altmd-ast/: Cargo.toml
crates/altmd-ast/src/: component.rs  error.rs  lib.rs
crates/altmd-cli/: Cargo.toml
crates/altmd-cli/assets/: default.css
crates/altmd-cli/src/: include.rs  main.rs
crates/altmd-cli/tests/: cli.rs
crates/altmd-core/: Cargo.toml
crates/altmd-core/src/: error.rs  lib.rs  policy.rs  render.rs
crates/altmd-core/tests/: altmd_conformance.rs  commonmark.rs  fuzz.proptest-regressions  fuzz.rs
crates/altmd-parser/: Cargo.toml
crates/altmd-parser/src/: error.rs  lib.rs  serializer.rs
crates/altmd-parser/tests/: roundtrip.proptest-regressions  roundtrip.rs
crates/altmd-sanitize/: Cargo.toml
crates/altmd-sanitize/proptest-regressions/: lib.txt
crates/altmd-sanitize/src/: error.rs  lib.rs
crates/altmd-wasm/: Cargo.toml
crates/altmd-wasm/src/: lib.rs
docs/: architecture.md  spec.md
examples/: hello.alt  kitchen-sink.alt
js/: .gitignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vitest.config.ts
js/demo/: README.md  app.js  article.html  article.js  demo.css  index.html  kitchensink.html  playground.html  playground.js
js/demo/articles/: cs-lewis.alt  cybersecurity.alt  languages.alt  paradox-of-genius.alt
js/e2e/: articles.spec.ts  demo.spec.ts  graphics.spec.ts  playground.spec.ts
js/scripts/: build-site.sh  build-wasm.sh
spec/altmd/: README.md  cases.json
spec/commonmark/: README.md
