[package]
name = "altmd-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "alt-markdown abstract syntax tree and the parser/serializer trait boundary."

[dependencies]
thiserror.workspace = true
serde = { workspace = true }

[lints]
workspace = true
