[package]
name = "altmd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Public facade for the alt-markdown core (parser, AST, render)."

[dependencies]
altmd-ast.workspace = true
altmd-parser.workspace = true
altmd-sanitize.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
altmd-parser.workspace = true
proptest.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
