[package]
name = "altmd-sanitize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raw-HTML allowlist sanitiser for alt-markdown (Phase 3)."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
